# melchoir

./: .gitignore  Cargo.toml  README  jlink  jlink.gdb  memory.x  openocd
.cargo/: config
lapis/: Cargo.toml
lapis/src/: lib.rs
src/: bluetooth.rs  main.rs
