[package]
name = "melchoir"
version = "0.1.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtfm = "*"
cortex-m-semihosting = "0.3"
nrf52840-pac = { version =  "0.9", features = [ "rt" ], path = "nrf52840-pac" }
panic-semihosting = "*"

[profile.release]
codegen-units = 1
debug = true
lto = true
